[package]
name = "svg-halftone-lib"
version = "0.1.0"
authors = ["Erik Vesteraas <erik@vestera.as>"]
edition = "2018"

[dependencies]
image = { version = "0.21.0", default-features = false, features = ["jpeg", "png_codec", "gif_codec"] }
rand = { version = "0.7.3", features = ["small_rng"] }

[features]
default = []
wasm = ["rand/wasm-bindgen"]
